# redbull_case_study

./: pyproject.toml
data/: Red Bull Case Study Data.xlsx
src/: EDA.ipynb  forecast.ipynb  hello_world.py  moose.ipynb  presentation_graphs.ipynb
