[project]
name = "redbull-case-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Rainer Widmann",email = "rainer.widmann86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython (>=9.10.0,<10.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
